src-tauri/test_output.txt
   Compiling antigravity_tools v3.3.4 (/Users/lbjlaq/Desktop/未命名文件夹/src-tauri)
warning: unused import: `quota::*`
  --> src/modules/mod.rs:17:9
   |
17 | pub use quota::*;
   |         ^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `logger::*`
  --> src/modules/mod.rs:19:9
   |
19 | pub use logger::*;
   |         ^^^^^^^^^

warning: unused variable: `attempt`
   --> src/proxy/handlers/openai.rs:402:9
    |
402 |     for attempt in 0..max_attempts {
    |         ^^^^^^^
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
help: if this is intentional, prefix it with an underscore
    |
402 |     for _attempt in 0..max_attempts {
    |         +
help: you might have meant to pattern match on the similarly named constant `LEN`
    |
402 -     for attempt in 0..max_attempts {
402 +     for run::inner::{closure#0}::_::LEN in 0..max_attempts {
    |

warning: unused variable: `session_id`
  --> src/proxy/handlers/claude.rs:85:9
   |
85 |     let session_id: Option<&str> = None;
   |         ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_session_id`

error[E0063]: missing field `cache_control` in initializer of `mappers::claude::models::ContentBlock`
   --> src/proxy/mappers/claude/request.rs:636:25
    |
636 |                         ContentBlock::ToolUse {
    |                         ^^^^^^^^^^^^^^^^^^^^^ missing `cache_control`

warning: unused variable: `msg_count`
   --> src/proxy/mappers/claude/request.rs:212:9
    |
212 |     let msg_count = messages.len();
    |         ^^^^^^^^^
    |
help: if this is intentional, prefix it with an underscore
    |
212 |     let _msg_count = messages.len();
    |         +
help: you might have meant to pattern match on the similarly named constant `LEN`
    |
212 -     let msg_count = messages.len();
212 +     let run::inner::{closure#0}::_::LEN = messages.len();
    |

warning: unused variable: `i`
   --> src/proxy/mappers/claude/request.rs:213:10
    |
213 |     for (i, msg) in messages.iter().enumerate() {
    |          ^
    |
help: if this is intentional, prefix it with an underscore
    |
213 |     for (_i, msg) in messages.iter().enumerate() {
    |          +
help: you might have meant to pattern match on the similarly named constant `LEN`
    |
213 -     for (i, msg) in messages.iter().enumerate() {
213 +     for (run::inner::{closure#0}::_::LEN, msg) in messages.iter().enumerate() {
    |

warning: unused variable: `has_non_networking`
  --> src/proxy/mappers/common_utils.rs:39:9
   |
39 |     let has_non_networking = contains_non_networking_tool(tools);
   |         ^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_has_non_networking`

warning: unused variable: `is_high_quality_model`
  --> src/proxy/mappers/common_utils.rs:45:9
   |
45 |     let is_high_quality_model = mapped_model == "gemini-2.5-flash"
   |         ^^^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_is_high_quality_model`

warning: unused variable: `index`
   --> src/proxy/mappers/openai/request.rs:159:22
    |
159 |                 for (index, tc) in tool_calls.iter().enumerate() {
    |                      ^^^^^
    |
help: if this is intentional, prefix it with an underscore
    |
159 |                 for (_index, tc) in tool_calls.iter().enumerate() {
    |                      +
help: you might have meant to pattern match on the similarly named constant `LEN`
    |
159 -                 for (index, tc) in tool_calls.iter().enumerate() {
159 +                 for (run::inner::{closure#0}::_::LEN, tc) in tool_calls.iter().enumerate() {
    |

warning: unused variable: `thought_text`
   --> src/proxy/mappers/openai/streaming.rs:113:57
    |
113 | ...                   if let Some(thought_text) = part.get("thought").and_then(|t| t.as_str()) {
    |                                   ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_thought_text`

warning: unused variable: `model`
   --> src/proxy/mappers/openai/streaming.rs:322:5
    |
322 |     model: String,
    |     ^^^^^ help: if this is intentional, prefix it with an underscore: `_model`

warning: unused variable: `args`
   --> src/proxy/mappers/openai/streaming.rs:411:61
    |
411 | ...                   let args = func_call.get("args").unwrap_or(&json!({})).to_string();
    |                           ^^^^ help: if this is intentional, prefix it with an underscore: `_args`

For more information about this error, try `rustc --explain E0063`.
warning: `antigravity_tools` (lib test) generated 12 warnings
error: could not compile `antigravity_tools` (lib test) due to 1 previous error; 12 warnings emitted
